# AZH_Qt_Component

./: CMakeLists.txt  README
component/: CMakeLists.txt
component/include/: settingFile.hpp
component/src/: clickoptions.cpp  excelReader.cpp  settingFile.cpp
include/: clicklabel.h  clickoptions.h  collectbutton.h  excelReader.h  settingFile.hpp  switchquestion.h
src/: TestForQtComponent.cpp  clicklabel.cpp  collectbutton.cpp  excelReader.cpp  main.cpp  switchquestion.cpp
test/: CMakeLists.txt  TestForQtComponent.cpp  TestForQtComponent.h  main.cpp
test/src/: TestForQtComponent.cpp  TestForQtComponent.h
